lobehub/virtual-service.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: lobehub
spec:
  hosts:
    - lobe.lth.so
  gateways:
    - istio-ingress/public-gateway
  http:
    - route:
        - destination:
            host: lobehub.lobehub.svc.cluster.local
            port:
              number: 3210
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
